Fix z-index of notice alert

--- a/src/wp-console/scss/_notice.scss
+++ b/src/wp-console/scss/_notice.scss
@@ -9,7 +9,7 @@
     position: absolute !important;
     top: 5px;
     left: calc(50% - 250px);
-    z-index: 1;
+    z-index: 3;
     width: 500px;
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.25);
 
